--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,27 @@
-# Use postgres/example user/password credentials
-version: '3.1'
+version: 2.1
 
-services:
+orbs:
+  maven: circleci/maven@1.4.1
+executors:
+  java17:
+    docker:
+      - image: 'cimg/openjdk:17.0'
+jobs:
+  say-hello:
+     docker:
+      - image: cimg/base:stable
+     steps:
+      - checkout
+      - run:
+          name: "Say hello"
+          command: "echo Hello, World!"
 
-  dbservice:
-    image: postgres
-    restart: always
-    environment:
-      POSTGRES_PASSWORD: 123
-      POSTGRES_DB: dblibros
-    volumes:
-    - ./posgresdb:/var/lib/postgresql/data
-
-  app:
-    image: ddsdeploy
-    restart: always
-    ports:
-      - 8080:8080
-    environment:
-       hibernate__hbm2ddl__auto: create
-       javax__persistence__jdbc__driver: org.postgresql.Driver
-       javax__persistence__jdbc__password: 123
-       javax__persistence__jdbc__url: jdbc:postgresql://dbservice/dblibros
-       javax__persistence__jdbc__user: postgres
-    depends_on:
-     - dbservice
+workflows:
+  say-hello-workflow:
+    jobs:
+      - say-hello
+  maven_test:
+    jobs:
+      - maven/test:
+          command: '-X compile test'
+          executor: java17
